5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1764_674.log
== TEST (2019-05-23 16:57:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))
v1 = 0
numerador = 0
print (size (vetor))
print (firt(vetor))
print (last(vetor))
print (max(vetor))
print (min(vetor))
print (sum(vetor))
print (sum(vetor) / (size(vetor))
		 while (v1<size(vetor))
	numerador = numerador + size +firt+last+max+min+sum*size
-- ERROR:
File "XXXX", line 14
    while (v1<size(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))
v1 = 0
numerador = 0
print (size (vetor))
print (firt(vetor))
print (last(vetor))
print (max(vetor))
print (min(vetor))
print (sum(vetor))
print (sum(vetor) / (size(vetor))
		 while (v1 < print (vetor))
	numerador = numerador + size +firt+last+max+min+sum*size
-- ERROR:
File "XXXX", line 14
    while (v1 < print (vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))
v1 = 0
numerador = 0
print (size (vetor))
print (firt(vetor))
print (last(vetor))
print (max(vetor))
print (min(vetor))
print (sum(vetor))
print (sum(vetor) / (size(vetor))
	
	numerador = numerador + size +firt+last+max+min+sum*size
-- ERROR:
File "XXXX", line 15
    numerador = numerador + size +firt+last+max+min+sum*size
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))
v1 = 0
numerador = 0
print (size (vetor))
print (firt(vetor))
print (last(vetor))
print (max(vetor))
print (min(vetor))
print (sum(vetor))
print (sum(vetor) / (size(vetor))
	
	
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))
v1 = 0
numerador = 0
print (size (vetor))
print (firt(vetor))
print (last(vetor))
print (max(vetor))
print (min(vetor))
print (sum(vetor))
print (sum(vetor) / (size(vetor))
	

-- ERROR:
File "XXXX", line 15
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:58:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))
v1 = 0
numerador = 0
print (size (vetor))
print (firt(vetor))
print (last(vetor))
print (max(vetor))
print (min(vetor))
print (sum(vetor))
print (sum(vetor) / (size(vetor))

-- EXECUTION TIME:
0.217663
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 14
    
                                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))
v1 = 0
numerador = 0
print (size (vetor))
print (firt(vetor))
print (last(vetor))
print (max(vetor))
print (min(vetor))
print (sum(vetor))
print (sum(vetor) / (size(vetor))

-- ERROR:
File "XXXX", line 14
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:03:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print (size (vetor))
print ([0](vetor))
print ([-1](vetor))
print (max(vetor))
print (min(vetor))
print (sum(vetor))
print (sum(vetor)/(size(vetor))
-- ERROR:
File "XXXX", line 13
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:06:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print (vetor(size))
print (vetor([0]))
print ((vetor([-1]))
print (vetor(max))
print ((vetor(min))
print ((vetor(min))
print (round(sum(vetor)/(rpund(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print (vetor(max))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:07:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print (vetor(size))
print (vetor([0]))
print (vetor([-1])
print (vetor(max))
print (vetor(min))
print (vetor(min))
print (round(sum(vetor)/(rpund(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print (vetor(max))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:10:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print (vetor(size))
print (vetor([0]))
print (vetor([-1])
print ((max(vetor))
print ((min(vetor))
print (round(sum(vetor)/(rpund(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print ((max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:10:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print (vetor(size))
print (vetor([0]))
print (vetor([-1])
print ((max(vetor))
print ((min(vetor))
print (round(sum(vetor)/(rpund(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print ((max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:11:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print (vetor(size))
print (vetor([0]))
print (vetor([-1])
print (max(vetor))
print (min(vetor))
print (round(sum(vetor)/(rpund(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print (max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:11:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor([-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/(rpund(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print(max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:11:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor([-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/(rpund(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print(max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:12:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor([-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print(max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:12:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor([-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print(max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:12:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor([-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print(max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:14:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor([-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print(max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:14:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
#print(vetor([-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
File "XXXX", line 12
    
                                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:15:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
#print(vetor([-1])
print(max(vetor))
print(min(vetor))
#print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:15:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor([-1])
print(max(vetor))
print(min(vetor))
#print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
File "XXXX", line 9
    print(max(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:16:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor[-1])
print(max(vetor))
print(min(vetor))
#print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:16:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/(round(size(vetor)))
-- ERROR:
File "XXXX", line 12
    
                                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:18:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(vetor(size))
print(vetor([0]))
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/size(vetor), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:20:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(size(vetor))
print(vetor([0]))
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/size(vetor), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:21:11) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(size(vetor))
print(vetor[0])
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/size(vetor), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:21:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(size(vetor))
print(vetor[0])
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/size(vetor), 2))
-- EXECUTION TIME:
0.552916
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
10.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:21:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(size(vetor))
print(vetor[0])
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print(round(sum(vetor)/size(vetor), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:23:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(size(vetor))
print(vetor[0])
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print (sum (vetor))
print(round(sum(vetor)/size(vetor), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:24:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
vetor = array(eval(input("informe os dados: ")))

print(size(vetor))
print(vetor[0])
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print (sum (vetor))
print(round(sum(vetor)/size(vetor), 2))
-- EXECUTION TIME:
0.435989
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
